[#2037] Fix for authors table dragging indicator being cut off

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -932,7 +932,7 @@ li.account p{
 }
 
 .contact-table td.drag-indicator, .contact-table th.drag-indicator {
-	width: 20px;
+	width: 45px;
 }
 
 .contact-table td:last-child{
